# covername

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
.kiro/: steering.md
.kiro/steering/: ponytail.md
Formula/: covername.rb
crates/covername-cli/: Cargo.toml
crates/covername-cli/src/: main.rs
crates/covername-core/: Cargo.toml
crates/covername-core/src/: config.rs  detection.rs  document.rs  error.rs  export.rs  ignore.rs  lib.rs  mapping.rs  ocr.rs  output.rs  pdf_output.rs  pdfium.rs  pipeline.rs  processor.rs  redact.rs  replacement.rs  smart_detection.rs  utils.rs  xlsx.rs
crates/covername-core/src/ner/: dictionary.rs  mod.rs  model_manager.rs  onnx.rs
crates/covername-core/tests/: pdf_pipeline_test.rs  pipeline_test.rs
crates/covername-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/covername-tauri/capabilities/: default.json
crates/covername-tauri/icons/: icon.icns
crates/covername-tauri/src/: main.rs
docs/: AGENT-SKILL.md  design.md  implementation-plan.md
scripts/: prepare-bundle.sh
test-fixtures/: sample.txt
ui/: DESIGN.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/: api.ts  constants.ts
ui/src/routes/: BatchView.svelte  DetectionSidebar.svelte  DocumentView.svelte  DropZone.svelte  Onboarding.svelte  ProgressBar.svelte  Settings.svelte  Toast.svelte
