[package]
name = "covername-core"
version = "0.3.0"
edition = "2024"
description = "Core library for Covername — local-first document anonymization"

[features]
default = []
onnx = ["ort", "tokenizers", "ndarray"]
download = ["reqwest"]
smart-detection = ["llama-cpp-v3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
pdf-extract = "0.12"
lopdf = "0.34"
printpdf = { version = "0.9", default-features = false }
zip = "2"
walkdir = "2"
calamine = "0.26"
rust_xlsxwriter = "0.80"
tempfile = "3"
pdfium-render = "0.8"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# Optional ONNX NER dependencies (enabled via --features onnx)
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native"], optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"], optional = true }
ndarray = { version = "0.17", optional = true }

# Progress bars for CLI feedback
indicatif = "0.17"

# Structured logging
tracing = "0.1"

# Optional download dependencies (enabled via --features download)
reqwest = { version = "0.12", features = ["blocking"], optional = true }

# Optional Smart Detection model (enabled via --features smart-detection)
llama-cpp-v3 = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
