[package]
name = "covername-tauri"
version = "0.1.0"
edition = "2024"
description = "Tauri desktop app for Covername"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
covername-core = { path = "../covername-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
