[package]
name = "covername-tauri"
version = "0.3.0"
edition = "2024"
description = "Tauri desktop app for Covername"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
covername-core = { path = "../covername-core", features = ["onnx", "download"] }
chrono = "0.4"
dirs = "6"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
